BUG FIX: 修复input-addon的z-index太低被覆盖。

--- a/src/styles/modules/_input.scss
+++ b/src/styles/modules/_input.scss
@@ -29,6 +29,7 @@
   position: absolute;
   right: 0.75rem;
   top: 50%;
+  z-index: 2;
   padding-right: 1px;
   transform:  translateY(-50%);
 }
